# snapshot-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  main.c
src/include/swamp-snapshot/: read.h  read_typeinfo.h  write.h  write_typeinfo.h
src/lib/: CMakeLists.txt  snapshot_in.c  snapshot_out.c
